<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D03A9F4"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="269dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="27dp"
        android:background="#66A3ABAF"
        app:layout_constraintBottom_toTopOf="@+id/checkboxLayout"
        app:layout_constraintEnd_toStartOf="@+id/MyImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/txtName" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/txtEmail" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editEmail" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/MyImage"
        android:layout_width="98dp"
        android:layout_height="114dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/checkboxLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thachlong" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/checkboxLayout"
        android:layout_width="390dp"
        android:layout_height="137dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="20dp"
        android:background="#66A3ABAF"
        app:layout_constraintBottom_toTopOf="@+id/RadioLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyImage">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="307dp"
            android:layout_marginRight="307dp"
            android:text="@string/txtCheckBoxTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="33dp"
            android:checked="false"
            android:text="@string/chkReading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chkTravelling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/chkTravelling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:checked="false"
            android:text="@string/chkTravelling"
            app:layout_constraintEnd_toStartOf="@+id/chkCoding"
            app:layout_constraintStart_toEndOf="@+id/chkReading"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkCoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="57dp"
            android:layout_marginRight="57dp"
            android:checked="false"
            android:text="@string/chkCoding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chkTravelling"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="389dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="19dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages">

        <Switch
            android:id="@+id/switchExpert"
            android:layout_width="300dp"
            android:layout_height="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="10dp"
            android:background="#66A3ABAF"
            android:text="@string/txtExpert" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/languages"
        android:layout_width="391dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="8dp"
        android:background="#66A3ABAF"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioLayout">

        <TextView
            android:id="@+id/txtLang"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/txtLan" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/lan_array" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="253dp"
        android:layout_height="58dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="102dp"
            android:layout_height="61dp"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="133dp"
            android:layout_height="63dp"
            android:text="@string/btnInfo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RadioLayout"
        android:layout_width="400dp"
        android:layout_height="114dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:background="#66A3ABAF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxLayout">

        <TextView
            android:id="@+id/sex"
            android:layout_width="30dp"
            android:layout_height="21dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="344dp"
            android:layout_marginRight="344dp"
            android:text="@string/txtSex" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="356dp"
            android:layout_height="47dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdMale"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdMale" />

            <RadioButton
                android:id="@+id/rdFemale"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdFemale" />
        </RadioGroup>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
